--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,11 @@ before_install:
   - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v0.1.5.0/stack-0.1.5.0-x86_64-linux.tar.gz | tar xz -C ~/.local/bin
   - export PATH=/opt/ghc/7.10.2/bin:$PATH
 
-script:
+install:
   - stack --no-terminal --skip-ghc-check setup
+  - stack --no-terminal --skip-ghc-check --only-snapshot build
+
+script:
   - stack --no-terminal --skip-ghc-check build
 
 addons:
