--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,14 @@ language: c
 before_install:
   - mkdir -p ~/.local/bin
   - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v0.1.5.0/stack-0.1.5.0-x86_64-linux.tar.gz | tar xz -C ~/.local/bin
+  - export PATH=/opt/ghc/7.10.2/bin:~/.local/bin:$PATH
 
 install:
-  - export PATH=/opt/ghc/7.10.2/bin:~/.local/bin:$PATH
-  - stack --no-terminal --skip-ghc-check setup
-  - stack --no-terminal --skip-ghc-check --only-snapshot build
+  - ~/.local/bin/stack --no-terminal --skip-ghc-check setup
+  - ~/.local/bin/stack --no-terminal --skip-ghc-check --only-snapshot build
 
 script:
-  - export PATH=/opt/ghc/7.10.2/bin:~/.local/bin:$PATH
-  - stack --no-terminal --skip-ghc-check build
+  - ~/.local/bin/stack --no-terminal --skip-ghc-check build
 
 addons:
   apt:
