Better cabal-constraints output formatting

--- a/snapshot-versions.cabal
+++ b/snapshot-versions.cabal
@@ -33,6 +33,7 @@ library
                      , MissingH
                      , tar
 
+  ghc-options:         -ddump-deriv
   default-language:    Haskell2010
 
 executable snapshot-versions
