--- a/snapshot-versions.cabal
+++ b/snapshot-versions.cabal
@@ -32,6 +32,7 @@ library
                      , pretty
                      , MissingH
                      , tar
+                     , pretty-show
 
   ghc-options:         -ddump-deriv
   default-language:    Haskell2010
