--- a/snapshot-versions.cabal
+++ b/snapshot-versions.cabal
@@ -34,13 +34,13 @@ library
                      , tar
                      , pretty-show
 
-  ghc-options:         -ddump-deriv
+  ghc-options:         -Wall -Werror
   default-language:    Haskell2010
 
 executable snapshot-versions
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
   build-depends:       base
                      , snapshot-versions
                      , containers
