--- a/snapshot-versions.cabal
+++ b/snapshot-versions.cabal
@@ -13,36 +13,39 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     SnapshotVersions.CmdLine
+  exposed-modules:     SnapshotVersions.Cache
+                     , SnapshotVersions.CmdLine
                      , SnapshotVersions.Snapshot
                      , SnapshotVersions.Cabal
                      , SnapshotVersions.PackageIndex
                      , SnapshotVersions.ProcessedPackages
                      , SnapshotVersions.Output
+  other-modules:       Paths_snapshot_versions
   build-depends:       base >= 4.7 && < 5
+                     , Cabal
+                     , bytestring
+                     , cereal
                      , containers
                      , directory
                      , filepath
-                     , bytestring
-                     , transformers
-                     , mtl
-                     , Cabal
-                     , optparse-applicative
                      , http-conduit
+                     , mtl
+                     , optparse-applicative
                      , pretty
-                     , MissingH
-                     , tar
                      , pretty-show
+                     , tar
+                     , transformers
 
-  ghc-options:         -Wall -Werror
+  ghc-options:         -Wall -O2
   default-language:    Haskell2010
 
 executable snapshot-versions
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
   build-depends:       base
                      , snapshot-versions
+                     , bytestring
                      , containers
                      , mtl
   default-language:    Haskell2010
