--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,11 @@ before_install:
   - export PATH=/opt/ghc/7.10.2/bin:~/.local/bin/stack-0.1.5.0-x86_64-linux:$PATH
 
 install:
-  - stack --no-terminal --skip-ghc-check setup
+  - stack --no-terminal update
+  - stack --no-terminal setup
 
 script:
-  - stack --no-terminal --skip-ghc-check build
-
-addons:
-  apt:
-    sources:
-      - hvr-ghc
-    packages:
-      - ghc-7.10.2
-      - libgmp-dev
+  - stack --no-terminal build
 
 cache:
   directories:
