--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ sudo: false
 language: c
 
 before_install:
-  - mkdir -p ~/.local/bin
-  - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v0.1.5.0/stack-0.1.5.0-x86_64-linux.tar.gz | tar xz -C ~/.local/bin
-  - export PATH=/opt/ghc/7.10.2/bin:~/.local/bin/stack-0.1.5.0-x86_64-linux:$PATH
-
+  - wget -qO- https://get.haskellstack.org/ | sh
+  
 install:
   - stack --no-terminal update
   - stack --no-terminal setup
